WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53370
XSSFilter should replace URLs with about:blank instead of the empty string
https://bugs.webkit.org/show_bug.cgi?id=53370
Summary
XSSFilter should replace URLs with about:blank instead of the empty string
Adam Barth
Reported
2011-01-28 23:47:57 PST
XSSFilter should replace URLs with about:blank instead of the empty string
Attachments
Patch
(1.97 KB, patch)
2011-01-28 23:48 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2011-01-28 23:48:52 PST
Created
attachment 80552
[details]
Patch
Gustavo Noronha (kov)
Comment 2
2011-01-28 23:52:53 PST
Attachment 80552
[details]
did not build on gtk: Build output:
http://queues.webkit.org/results/7567446
WebKit Review Bot
Comment 3
2011-01-28 23:52:59 PST
Attachment 80552
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/7679063
Early Warning System Bot
Comment 4
2011-01-29 00:01:31 PST
Attachment 80552
[details]
did not build on qt: Build output:
http://queues.webkit.org/results/7679065
Adam Barth
Comment 5
2011-01-29 00:10:08 PST
This patch builds fine. It just depends on patches earlier in the sequence.
Build Bot
Comment 6
2011-01-29 00:15:45 PST
Attachment 80552
[details]
did not build on win: Build output:
http://queues.webkit.org/results/7582428
WebKit Review Bot
Comment 7
2011-01-29 00:35:01 PST
Attachment 80552
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/7679072
Adam Barth
Comment 8
2011-01-29 01:22:37 PST
Comment on
attachment 80552
[details]
Patch Clearing flags on attachment: 80552 Committed
r77060
: <
http://trac.webkit.org/changeset/77060
>
Adam Barth
Comment 9
2011-01-29 01:22:41 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 10
2011-01-29 03:43:09 PST
http://trac.webkit.org/changeset/77060
might have broken GTK Linux 64-bit Debug
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug